--- a/Text_Project/Src/edit.css
+++ b/Text_Project/Src/edit.css
@@ -1,82 +1,341 @@
+.main-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
 .edit_container {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  margin: 35px -10px 0 -10px;
+  padding: 5px;
+  overflow-y: visible;
 }
-.edit_container textarea {
-  margin-top: 30px;
-}
-
-.edit_title {
+.Input {
   display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.Input input {
+  border-radius: 20px;
+  width: 300px;
+  height: 15px;
+  margin-right: 10px;
+  border: 1px solid;
+  padding: 5px;
+}
+.Ent_btn {
+  display: flex;
+  align-items: center;
+}
+.Ent_btn button {
+  background-image: linear-gradient(
+    to right,
+    rgb(135, 207, 255),
+    rgb(255, 145, 255)
+  );
+  border-radius: 5px;
+  border: 1px solid;
+  width: 70px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-weight: bold;
+  padding: 5px;
+}
+.Ent_btn button:hover {
+  background-image: none;
+  background-color: rgb(94, 185, 255);
+}
+.Ent_btn:active {
+  /*add transition*/
+  transform: translateY(2px);
+}
+.themes {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(181, 220, 255, 0.5);
+  padding-top: 5px;
+}
+.title-theme {
   text-align: center;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  font-size: 35px;
   font-weight: bold;
-  margin: 10px;
 }
-.edit_title span {
-  background-color: aliceblue;
-  padding: 0px 10px 5px 10px;
-  border: 1px solid black;
-  border-radius: 10px;
+.templetes {
+  display: flex;
+  flex-direction: row;
+  padding: 10px 5px 15px 5px;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+.common-btn {
+  width: 250px; /* same width for all buttons */
+  height: 40px; /* same height for all buttons */
+  border: 2px solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-right: 10px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: bold;
 }
 
-.edit_panel {
-  display: flex;
-  background-color: rgba(255, 255, 255, 0.5); /* Red with 50% transparency */
-  margin: 10px 0 0 0;
-  border: 1px solid;
-  border-radius: 10px;
-  width: 80%;
-}
-.edit_name {
-  display: flex;
-  flex-direction: column;
-  overflow-y: auto;
-  margin: 30px 0 30px 10px;
-}
-.edit_name span {
-  margin: 30px 10px 50px 30px;
-  font-size: 20px;
-}
-.edit_tool {
-  display: flex;
-  flex-direction: column;
+#t1 {
+  background-image: linear-gradient(
+    to right,
+    rgb(115, 208, 255),
+    rgb(255, 146, 255)
+  );
 }
 
-.pre_output {
-  background-color: rgba(255, 255, 255, 0.5); /* Red with 50% transparency */
-  margin: 10px 0 0px 10px;
-  padding: 5px;
-  border: 1px solid;
-  border-radius: 10px;
+#t2 {
+  background-image: linear-gradient(
+    to right,
+    rgb(236, 255, 69),
+    rgb(73, 255, 76)
+  );
+}
+
+#t3 {
+  background-image: linear-gradient(
+    to right,
+    rgb(255, 173, 50),
+    rgb(255, 114, 114)
+  );
+}
+#t4 {
+  background-image: linear-gradient(
+    to right,
+    rgb(205, 55, 255),
+    rgb(255, 70, 162)
+  );
+}
+#t5 {
+  background-image: linear-gradient(
+    to right,
+    rgb(44, 153, 255),
+    rgb(0, 255, 0)
+  );
+}
+#t6 {
+  background-image: linear-gradient(
+    to right,
+    rgb(255, 69, 69),
+    rgb(255, 255, 0)
+  );
+}
+#t7 {
+  background-color: lavender;
+}
+#t8 {
+  background-color: aquamarine;
+}
+#t9 {
+  background-color: deepskyblue;
+}
+#t10 {
+  background-color: greenyellow;
+}
+#t11 {
+  background-color: yellow;
+}
+#t12 {
+  background-color: crimson;
+}
+#t13 {
+  background-color: rgb(0, 98, 255);
+}
+#t14 {
+  background-color: mediumorchid;
+}
+#t15 {
+  background-color: deeppink;
+}
+
+.preview_container {
+  display: flex;
+  flex-direction: row;
+  margin: 0 0 10px 0;
+}
+.text-container {
+  overflow: hidden; /* Hide overflowing text */
+  white-space: nowrap; /* Prevent text wrapping */
+  background-color: hotpink;
+  display: flex;
+  justify-content: center;
   flex-grow: 1;
+  margin-left: 10px;
+}
+.scrolling-text {
+  display: inline-flex; /* Allow text to scroll horizontally */
+  animation: scrolltext 20s linear infinite; /* Animation properties */
+  position: sticky;
+  top: 0;
+  background-color: lightskyblue;
+  background-image: none;
+  font-size: 20px;
+  text-align: center;
 }
 
-@media (max-width: 600px) {
-  .edit_title span {
-    background-color: rgba(255, 255, 255, 0.5); /* Red with 50% transparency */
-    padding: 0px 10px 5px 10px;
-    border: 1px solid black;
-    border-radius: 10px;
+@keyframes scrolltext {
+  0% {
+    transform: translateX(30%); /* Start from the left */
   }
-  .edit_name span {
-    margin: 20px 0 20px 20px;
-    font-size: 20px;
+  100% {
+    transform: translateX(-100%); /* Move text beyond container width */
   }
-  .edit_panel {
+}
+.run-btn {
+  background-image: linear-gradient(
+    to right,
+    rgb(135, 207, 255),
+    rgb(255, 145, 255)
+  );
+  border-radius: 5px;
+  border: 1px solid;
+  width: 70px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-weight: bold;
+  padding: 5px;
+  margin: 0 10px 0 10px;
+}
+.run-btn:hover {
+  background-image: none;
+  background-color: rgb(94, 185, 255);
+}
+.run-btn:active {
+  /*add transition*/
+  transform: translateY(2px);
+}
+.edit_body {
+  display: flex;
+  flex-direction: column;
+}
+
+.preview {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgb(255, 242, 255, 0.5);
+  flex-grow: 1;
+  margin-bottom: 20px;
+}
+
+.edit-part {
+  display: flex;
+  flex-direction: column;
+}
+.edit-styling {
+  text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-weight: bold;
+  margin: 5px;
+}
+.edit-panel {
+  display: flex;
+  flex-direction: row;
+}
+.edit-part-1 {
+  display: flex;
+  /* background-color: dodgerblue; */
+  flex-grow: 1;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0px 0 20px 0;
+  margin-right: 50px;
+}
+.edit-part-2 {
+  display: flex;
+  /* background-color: cyan; */
+  flex-grow: 1;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0px 0 20px 0;
+  margin-left: 50px;
+}
+.names-edit {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  margin: 20px 0 20px 0;
+  font-weight: bold;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  /* background-color: coral; */
+}
+.func-edit-1 {
+  display: flex;
+  flex-direction: column;
+  /* background-color: deeppink; */
+  gap: 40px;
+}
+.func-edit-2 {
+  display: flex;
+  flex-direction: column;
+  /* background-color: crimson; */
+  gap: 50px;
+}
+
+.select-er {
+  height: 30px;
+  width: 200px;
+  background-color: rgb(255, 145, 233);
+  vertical-align: middle;
+  font-weight: bold;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 15px;
+  align-items: center;
+}
+
+.range-styled {
+  /* Reset the default appearance */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  /* Set the width, height, and background color */
+  width: 200px;
+  height: 5px;
+  /* Style the track */
+  &::-webkit-slider-runnable-track {
     width: 100%;
+    height: 3px;
+    background-color: dodgerblue;
+    border-radius: 3px;
   }
-  .edit_tool .text_size {
-    margin-top: 55px;
-    margin-left: 50px;
-    width: 200px;
+  &::-moz-range-track {
+    width: 100%;
+    height: 3px;
+    background-color: #ff81ff;
+    border-radius: 3px;
   }
-  #preview {
-    display: none;
+  /* Style the thumb */
+  &::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    background-color: dodgerblue;
+    border-radius: 50%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
   }
-  .pre_output {
-    display: none;
+  &::-moz-range-thumb {
+    -moz-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    background-color: rgb(149, 0, 134);
+    border-radius: 50%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
   }
+}
+input[type="range"]::-moz-range-progress {
+  background-color: #690075;
+}
+input[type="range"]::-moz-range-track {
+  background-color: dodgerblue;
+}
+/* IE*/
+input[type="range"]::-ms-fill-lower {
+  background-color: blue;
+}
+input[type="range"]::-ms-fill-upper {
+  background-color: #9a905d;
 }
