--- a/Text_Project/Src/style.css
+++ b/Text_Project/Src/style.css
@@ -1,29 +1,33 @@
 .Header {
-  background-color: aliceblue;
+  background-color: rgb(235, 121, 255);
   display: flex;
   position: fixed; /* Make the header static */
   top: 0; /* Position it at the top of the viewport */
   left: 0; /* Position it at the left of the viewport */
   width: 100%;
+  z-index: 100; /* higher z-index value */
 }
 .Menu_panel {
+  display: flex;
   padding: 5px;
   margin-right: 5px;
+  flex-wrap: nowrap;
 }
 
 .Menu_panel button {
   border-radius: 10px;
-  background-color: lightskyblue;
+  background: none;
   color: black;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   padding: 5px 10px 5px 10px;
-  margin-right: 5px;
+  margin-right: 10px;
   border: none;
+  cursor: pointer;
 }
 .Menu_panel button:hover {
-  background-color: dodgerblue;
-  color: lightblue;
+  background-color: rgb(117, 186, 255);
+  color: black;
 }
 
 .logo_div {
@@ -43,6 +47,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin-top: 140px;
 }
 
@@ -59,10 +64,10 @@
 .btn_start {
   display: flex;
   margin-top: 40px;
-  justify-content: center;
+  /* justify-content: center; */
 }
 .btn_start button {
-  border: 1px solid black;
+  border: 1px solid;
   background-color: skyblue;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 15px;
@@ -75,21 +80,10 @@
 }
 
 @media (max-width: 600px) {
-  .Main_Title {
-    margin-top: 90px;
-  }
   .MTitle {
     font-size: 35px;
-    margin-left: 0;
   }
   .STitle {
     font-size: 20px;
-  }
-  .btn_start {
-    margin-top: 100px;
-    margin-left: -90px;
-  }
-  .btn_start button {
-    padding: 5px;
   }
 }
