Chnage style of input range

--- a/Text_Project/Src/edit.css
+++ b/Text_Project/Src/edit.css
@@ -267,7 +267,7 @@
   display: flex;
   flex-direction: column;
   /* background-color: crimson; */
-  gap: 50px;
+  gap: 45px;
 }
 
 .select-er {
@@ -281,59 +281,33 @@
   align-items: center;
 }
 
-.range-styled {
-  /* Reset the default appearance */
+.slider {
   -webkit-appearance: none;
-  -moz-appearance: none;
+  width: 100%;
+  height: 25px;
+  background: #000000;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
   appearance: none;
-  /* Set the width, height, and background color */
-  width: 200px;
-  height: 5px;
-  /* Style the track */
-  &::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 3px;
-    background-color: dodgerblue;
-    border-radius: 3px;
-  }
-  &::-moz-range-track {
-    width: 100%;
-    height: 3px;
-    background-color: #ff81ff;
-    border-radius: 3px;
-  }
-  /* Style the thumb */
-  &::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 15px;
-    height: 15px;
-    background-color: dodgerblue;
-    border-radius: 50%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-  }
-  &::-moz-range-thumb {
-    -moz-appearance: none;
-    appearance: none;
-    width: 15px;
-    height: 15px;
-    background-color: rgb(149, 0, 134);
-    border-radius: 50%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-  }
+  width: 25px;
+  height: 25px;
+  background: #04aa6d;
+  cursor: pointer;
 }
-input[type="range"]::-moz-range-progress {
-  background-color: #690075;
-}
-input[type="range"]::-moz-range-track {
-  background-color: dodgerblue;
-}
-/* IE*/
-input[type="range"]::-ms-fill-lower {
-  background-color: blue;
-}
-input[type="range"]::-ms-fill-upper {
-  background-color: #9a905d;
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: blue;
+  cursor: pointer;
 }
