--- a/Text_Project/Src/edit.css
+++ b/Text_Project/Src/edit.css
@@ -75,7 +75,7 @@
   font-weight: bold;
 }
 
-#t1 {
+.t1 {
   background-image: linear-gradient(
     to right,
     rgb(115, 208, 255),
@@ -83,7 +83,7 @@
   );
 }
 
-#t2 {
+.t2 {
   background-image: linear-gradient(
     to right,
     rgb(236, 255, 69),
@@ -91,59 +91,59 @@
   );
 }
 
-#t3 {
+.t3 {
   background-image: linear-gradient(
     to right,
     rgb(255, 173, 50),
     rgb(255, 114, 114)
   );
 }
-#t4 {
+.t4 {
   background-image: linear-gradient(
     to right,
     rgb(205, 55, 255),
     rgb(255, 70, 162)
   );
 }
-#t5 {
+.t5 {
   background-image: linear-gradient(
     to right,
     rgb(44, 153, 255),
     rgb(0, 255, 0)
   );
 }
-#t6 {
+.t6 {
   background-image: linear-gradient(
     to right,
     rgb(255, 69, 69),
     rgb(255, 255, 0)
   );
 }
-#t7 {
+.t7 {
   background-color: lavender;
 }
-#t8 {
+.t8 {
   background-color: aquamarine;
 }
-#t9 {
+.t9 {
   background-color: deepskyblue;
 }
-#t10 {
+.t10 {
   background-color: greenyellow;
 }
-#t11 {
+.t11 {
   background-color: yellow;
 }
-#t12 {
+.t12 {
   background-color: crimson;
 }
-#t13 {
+.t13 {
   background-color: rgb(0, 98, 255);
 }
-#t14 {
+.t14 {
   background-color: mediumorchid;
 }
-#t15 {
+.t15 {
   background-color: deeppink;
 }
 
@@ -161,12 +161,12 @@
   flex-grow: 1;
   margin-left: 10px;
 }
-.scrolling-text {
+.text-container .scrolling-text {
   display: inline-flex; /* Allow text to scroll horizontally */
-  animation: scrolltext 20s linear infinite; /* Animation properties */
+  animation: scrolltext 24s linear infinite;
   position: sticky;
   top: 0;
-  background-color: lightskyblue;
+  background-color: #00bfff;
   background-image: none;
   font-size: 20px;
   text-align: center;
@@ -174,10 +174,10 @@
 
 @keyframes scrolltext {
   0% {
-    transform: translateX(30%); /* Start from the left */
+    transform: translateX(100%);
   }
   100% {
-    transform: translateX(-100%); /* Move text beyond container width */
+    transform: translateX(-100%);
   }
 }
 .run-btn {
@@ -281,33 +281,25 @@
   align-items: center;
 }
 
-.slider {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 25px;
-  background: #000000;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: 0.2s;
-  transition: opacity 0.2s;
-}
-
-.slider:hover {
-  opacity: 1;
-}
-
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  background: #04aa6d;
-  cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  background: blue;
-  cursor: pointer;
+@media (max-width: 600px) {
+  .func-edit-1 {
+    gap: 40px;
+  }
+  .range-styled {
+    width: 130px;
+  }
+  .select-er {
+    width: 130px;
+  }
+  .edit-part-1 {
+    padding: 0;
+    margin: 0;
+  }
+  .names-edit {
+    margin: 0;
+    gap: 45px;
+  }
+  .edit-part-2 {
+    padding-top: 10px;
+  }
 }
